# VisionCommon

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  static.yml
VisionCommon/: Viewer.py
VisionCommon/src/: Vision.py
VisionCommon/src/events/: VisionEvent.py
VisionCommon/src/exceptions/: InvalidCombinationException.py
VisionCommon/test/: test_VisionCommon.py
docs/: Makefile
docs/Viewer/: Viewer.drawio
docs/source/: conf.py  index.rst
docs/source/src/: viewer.rst
scripts/: build.sh  build_docs.sh
src/VisionCommon/: Viewer.py  __init__.py
src/VisionCommon/exceptions/: invalid_combination_exception.py
test/: test_VisionCommon.py
tests/: VisionCommon  test_VisionCommon.py
