[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "VisionCommon"
version = "1.2.0"
authors = [{ name = "Jarred" }]
description = "Common package for robotic computer vision"
readme = "README.md"
keywords = []
license = { text = "GPL-3.0" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["numpy", "opencv-python", "pyzbar"]
